# ACABot

./: .gitignore  Cargo.toml  README.md  changes.patch  example_env  makefile
migrations/2021-12-10-021452_aca_bot/: down.sql  up.sql
src/: db.rs  events.rs  general.rs  lib.rs  main.rs
src/db/: init.rs  init.sql  models.rs  schema.rs
src/lib/: general.rs
